# logistic_regression

./: diagnosis_tree.ipynb  diagnosis_tree_ai.ipynb  pyproject.toml
general_code/: diagnosis_tree.ipynb  diagnosis_tree_ai.ipynb  main.py
suspect-engine/: .env.ref  main.ipynb  main.py  suspect_engine.ipynb  test.py  update_member_claim.py  update_suspect_coll.py
