[project]
name = "logistic-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
]
